--- a/pages/admin/admin_booking.html
+++ b/pages/admin/admin_booking.html
@@ -8,30 +8,32 @@
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="../plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <link rel="stylesheet" href="../../plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- iCheck -->
-  <link rel="stylesheet" href="../plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="../../plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- JQVMap -->
-  <link rel="stylesheet" href="../plugins/jqvmap/jqvmap.min.css">
+  <link rel="stylesheet" href="../../plugins/jqvmap/jqvmap.min.css">
+  <!-- Favicon -->
+  <link rel="icon" href="../../dist/img/BlueDentalFavicon.png"/>
   <!-- Theme style -->
-  <link rel="stylesheet" href="../dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="../../plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="../plugins/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="../../plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
-  <link rel="stylesheet" href="../plugins/summernote/summernote-bs4.min.css">
+  <link rel="stylesheet" href="../../plugins/summernote/summernote-bs4.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="../dist/img/BlueDental.png" alt="Blue Dental Logo" height="200" width="200">
+    <img class="animation__shake" src="../../dist/img/BlueDental.png" alt="Blue Dental Logo" height="200" width="200">
   </div>
 
   <!-- Navbar -->
@@ -42,7 +44,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="../index.html" class="nav-link">Home</a>
+        <a href="../../index.html" class="nav-link">Home</a>
       </li>
     </ul>
 
@@ -74,11 +76,6 @@
           <i class="fas fa-expand-arrows-alt"></i>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#" role="button">
-          <i class="fas fa-th-large"></i>
-        </a>
-      </li>
     </ul>
   </nav>
   <!-- /.navbar -->
@@ -86,8 +83,8 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="../index.html" class="brand-link">
-      <img src="../dist/img/BlueDentalLogo.jpeg" alt="Blue Dental Logo" class="brand-image img-circle elevation-3" style="opacity: .9;" height="60" width="60">
+    <a href="../tentang-kami/tim-kami.html" class="brand-link">
+      <img src="../../dist/img/BlueDentalLogo.jpeg" alt="Blue Dental Logo" class="brand-image img-circle elevation-3" style="opacity: .9;" height="60" width="60">
       <span class="brand-text font-weight-light">Blue Dental Admin</span>
     </a>
 
@@ -96,7 +93,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="../dist/img/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="../../dist/img/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block">Admin</a>
@@ -130,13 +127,13 @@
                 </a>
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
-                    <a href="form_booking.html" class="nav-link">
+                    <a href="../forms/form_booking.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Tambah Daftar Booking</p>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="admin.html" class="nav-link">
+                    <a href="admin_booking.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Daftar Booking</p>
                     </a>
@@ -153,7 +150,7 @@
                 </a>
                 <ul class="nav nav-treeview">
                   <li class="nav-item">
-                    <a href="data_dokter.html" class="nav-link">
+                    <a href="../admin/admin_data_dokter.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Kelola Data Dokter</p>
                     </a>
@@ -161,7 +158,7 @@
                 </ul>
               </li>
           <li class="nav-item">
-            <a href="../index.html" class="nav-link">
+            <a href="../../index.html" class="nav-link">
               <i class="nav-icon fas fa-sign-out-alt"></i>
               <p>Logout</p>
             </a>
@@ -184,7 +181,7 @@
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+              <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
               <li class="breadcrumb-item active">Admin</li>
               <li class="breadcrumb-item active">Booking</li>
             </ol>
@@ -201,7 +198,7 @@
         <div class="row">
             <div class="col-12">
               <!-- add button -->
-        <button type="button" class="btn btn-secondary mb-4"><a href="form_booking.html" class="text-decoration-none text-white">+ Tambah</a></button>
+        <button type="button" class="btn btn-secondary mb-4"><a href="../forms/form_booking.html" class="text-decoration-none text-white">+ Tambah</a></button>
         <!-- add button -->
               <div class="card">
                 <div class="card-header bg-dark">
@@ -279,7 +276,7 @@
                         <td>Jake Dos</td>
                         <td>08123456786</td>
                         <td>Drg. Devy</td>
-                        <td>Cabut Gigi</td>
+                        <td>Perawatan Gigi Anak</td>
                         <td>
                           <i class="far fa-eye mr-3"></i>
                           <i class="far fa-edit mr-3"></i>
@@ -292,7 +289,7 @@
                         <td>Mike Wazowski</td>
                         <td>08123456785</td>
                         <td>Drg. Zain</td>
-                        <td>Perawatan Gigi Anak</td>
+                        <td>Pemasangan Braces/Behel</td>
                         <td>
                           <i class="far fa-eye mr-3"></i>
                           <i class="far fa-edit mr-3"></i>
@@ -325,54 +322,45 @@
   </div>
   <!-- /.content-wrapper -->
   <footer class="main-footer">
-    <strong>Develop by Jovina Gustari @ 2022.</strong>
+    <strong>Develop by Kelompok III - TI02 &copy; 2022.</strong>
     All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
+    <div class="float-right d-none d-sm-inline">
+      <small>Powered by AdminLTE</small>
     </div>
   </footer>
-
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="../plugins/jquery/jquery.min.js"></script>
+<script src="../../plugins/jquery/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
-<script src="../plugins/jquery-ui/jquery-ui.min.js"></script>
+<script src="../../plugins/jquery-ui/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
   $.widget.bridge('uibutton', $.ui.button)
 </script>
 <!-- Bootstrap 4 -->
-<script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- ChartJS -->
-<script src="../plugins/chart.js/Chart.min.js"></script>
+<script src="../../plugins/chart.js/Chart.min.js"></script>
 <!-- Sparkline -->
-<script src="../plugins/sparklines/sparkline.js"></script>
+<script src="../../plugins/sparklines/sparkline.js"></script>
 <!-- JQVMap -->
-<script src="../plugins/jqvmap/jquery.vmap.min.js"></script>
-<script src="../plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+<script src="../../plugins/jqvmap/jquery.vmap.min.js"></script>
+<script src="../../plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
 <!-- jQuery Knob Chart -->
-<script src="../plugins/jquery-knob/jquery.knob.min.js"></script>
+<script src="../../plugins/jquery-knob/jquery.knob.min.js"></script>
 <!-- daterangepicker -->
-<script src="../plugins/moment/moment.min.js"></script>
-<script src="../plugins/daterangepicker/daterangepicker.js"></script>
+<script src="../../plugins/moment/moment.min.js"></script>
+<script src="../../plugins/daterangepicker/daterangepicker.js"></script>
 <!-- Tempusdominus Bootstrap 4 -->
-<script src="../plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="../../plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
 <!-- Summernote -->
-<script src="../plugins/summernote/summernote-bs4.min.js"></script>
+<script src="../../plugins/summernote/summernote-bs4.min.js"></script>
 <!-- overlayScrollbars -->
-<script src="../plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+<script src="../../plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../dist/js/adminlte.js"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="../dist/js/demo.js"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="../dist/js/pages/dashboard.js"></script>
+<script src="../../dist/js/adminlte.js"></script>
 </body>
 </html>
 <!-- Doctor 2 Photo by <a href="https://unsplash.com/@betoframe?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">humberto chavez</a> on <a href="https://unsplash.com/s/photos/doctor?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
