--- a/pages/admin/admin_data_dokter.html
+++ b/pages/admin/admin_data_dokter.html
@@ -10,18 +10,20 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="../plugins/fontawesome-free/css/all.min.css" />
+    <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css" />
     <!-- Ekko Lightbox -->
-    <link rel="stylesheet" href="../plugins/ekko-lightbox/ekko-lightbox.css" />
+    <link rel="stylesheet" href="../../plugins/ekko-lightbox/ekko-lightbox.css" />
+    <!-- Favicon -->
+  <link rel="icon" href="../../dist/img/BlueDentalFavicon.png"/>
     <!-- Theme style -->
-    <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
+    <link rel="stylesheet" href="../../dist/css/adminlte.min.css" />
 </head>
 
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
         <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="../dist/img/BlueDental.png" alt="Blue Dental Logo" height="200" width="200">
+    <img class="animation__shake" src="../../dist/img/BlueDental.png" alt="Blue Dental Logo" height="200" width="200">
   </div>
         <!-- Navbar -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -31,7 +33,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="../index.html" class="nav-link">Home</a>
+                    <a href="../../index.html" class="nav-link">Home</a>
                 </li>
             </ul>
 
@@ -64,11 +66,6 @@
                         <i class="fas fa-expand-arrows-alt"></i>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-                        <i class="fas fa-th-large"></i>
-                    </a>
-                </li>
             </ul>
         </nav>
         <!-- /.navbar -->
@@ -76,8 +73,8 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="../index.html" class="brand-link">
-                <img src="../dist/img/BlueDentalLogo.jpeg" alt="Blue Dental Logo" class="brand-image img-circle elevation-3"
+            <a href="../../index.html" class="brand-link">
+                <img src="../../dist/img/BlueDentalLogo.jpeg" alt="Blue Dental Logo" class="brand-image img-circle elevation-3"
                     style="opacity: 0.9" />
                 <span class="brand-text font-weight-light">Blue Dental Admin</span>
             </a>
@@ -87,7 +84,7 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="../dist/img/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image" />
+                        <img src="../../dist/img/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image" />
                     </div>
                     <div class="info">
                         <a href="#" class="d-block">Admin</a>
@@ -123,7 +120,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="admin.html" class="nav-link">
+                                    <a href="../admin/admin_booking.html" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Daftar Booking</p>
                                     </a>
@@ -140,13 +137,13 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="form_data_dokter.html" class="nav-link">
+                                    <a href="../forms/form_data_dokter.html" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Tambah Data Dokter</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="dokter-kami.html" class="nav-link">
+                                    <a href="../../index.html/#dokter-kami" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Dokter Kami</p>
                                     </a>
@@ -154,7 +151,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="../index.html" class="nav-link">
+                            <a href="../../index.html" class="nav-link">
                                 <i class="nav-icon fas fa-sign-out-alt"></i>
                                 <p>Logout</p>
                             </a>
@@ -177,7 +174,7 @@
                         </div>
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
                                 <li class="breadcrumb-item active">Admin</li>
                                 <li class="breadcrumb-item active">Data Dokter</li>
                             </ol>
@@ -193,7 +190,7 @@
                     <div class="row">
                         <div class="col-12">
                             <!-- add button -->
-        <button type="button" class="btn btn-secondary mb-4"><a href="form_data_dokter.html" class="text-decoration-none text-white">+ Tambah</a></button>
+        <button type="button" class="btn btn-secondary mb-4"><a href="../forms/form_data_dokter.html" class="text-decoration-none text-white">+ Tambah</a></button>
         <!-- add button -->
                             <div class="card">
                               <div class="card-header bg-dark">
@@ -253,7 +250,7 @@
                                       <td>3</td>
                                       <td>Drg. Rizki</td>
                                       <td>Laki-Laki</td>
-                                      <td>Dokter Gigi</td>
+                                      <td>Dokter Bedah Mulut</td>
                                       <td>08123456787</td>
                                       <td>
                                         <i class="far fa-eye mr-3"></i>
@@ -265,7 +262,7 @@
                                       <td>4</td>
                                       <td>Drg. Devy</td>
                                       <td>Perempuan</td>
-                                      <td>Dokter Bedah Mulut</td>
+                                      <td>Spesialis anak</td>
                                       <td>08123456786</td>
                                       <td>
                                         <i class="far fa-eye mr-3"></i>
@@ -311,30 +308,25 @@
 
         <footer class="main-footer">
             <div class="float-right d-none d-sm-block"></div>
-            <strong>Develop by Jovina Gustari @2022.</strong>
+            <strong>Develop by Kelompok III - TI02 &copy; 2022.</strong>
             All rights reserved.
+            <div class="float-right d-none d-sm-inline">
+                <small>Powered by AdminLTE</small>
+              </div>
         </footer>
-
-        <!-- Control Sidebar -->
-        <aside class="control-sidebar control-sidebar-dark">
-            <!-- Control sidebar content goes here -->
-        </aside>
-        <!-- /.control-sidebar -->
     </div>
     <!-- ./wrapper -->
 
     <!-- jQuery -->
-    <script src="../plugins/jquery/jquery.min.js"></script>
+    <script src="../../plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Ekko Lightbox -->
-    <script src="../plugins/ekko-lightbox/ekko-lightbox.min.js"></script>
+    <script src="../../plugins/ekko-lightbox/ekko-lightbox.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="../dist/js/adminlte.min.js"></script>
+    <script src="../../dist/js/adminlte.min.js"></script>
     <!-- Filterizr-->
-    <script src="../plugins/filterizr/jquery.filterizr.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="../dist/js/demo.js"></script>
+    <script src="../../plugins/filterizr/jquery.filterizr.min.js"></script>
     <!-- Page specific script -->
     <script>
         $(function () {
