--- a/pages/profil-dokter/profil_dokter3.html
+++ b/pages/profil-dokter/profil_dokter3.html
@@ -28,7 +28,7 @@
   <div class="wrapper">
 
     <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand-md navbar-light navbar-white sticky-top">
+    <nav class="main-header navbar navbar-expand-md navbar-light navbar-white sticky-top" style="background-color: #d4f1f4">
       <div class="container">
         <a href="../index.html" class="navbar-brand">
           <img src="../../dist/img/BlueDentalLogo.png" alt="Blue Dental Logo" class="brand-image img-circle elevation-3"
@@ -51,17 +51,17 @@
               <a href="../Layanan/layanan.html" class="nav-link">Layanan</a>
             </li>
             <li class="nav-item">
-              <a href="../form_booking.html" class="nav-link">Booking</a>
+              <a href="../forms/form_booking.html" class="nav-link">Booking</a>
             </li>
             <li class="nav-item">
               <a href="../testimoni.html" class="nav-link">Testimoni</a>
             </li>
             <li class="nav-item dropdown">
-              <a id="dropdownSubMenu1" href="about.html" data-toggle="dropdown" aria-haspopup="true"
+              <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false" class="nav-link dropdown-toggle">Tentang Kami</a>
               <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
-                <li><a href="../about.html" class="dropdown-item">About Blue Dental</a></li>
-                <li><a href="../about.html" class="dropdown-item">Our Team</a></li>
+                <li><a href="../tentang-kami/about.html" class="dropdown-item">Tentang Blue Dental</a></li>
+                <li><a href="../tentang-kami/tim-kami.html" class="dropdown-item">Tim Kami</a></li>
               </ul>
             </li>
           </ul>
@@ -179,8 +179,8 @@
                         <div class="card-body">
                           <ul class="list-unstyled">
                             <li><a href="../Layanan/layanan.html">Layanan</a></li>
-                            <li><a href="../../index.html">Dokter Kami</a></li>
-                            <li><a href="../about.html">Tentang Kami</a></li>
+                            <li><a href="../../index.html/#\">Dokter Kami</a></li>
+                            <li><a href="../tentang-kami/about.html">Tentang Kami</a></li>
                           </ul>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
         Powered by AdminLTE
       </div>
       <!-- Default to the left -->
-      <strong>Develop by Kelompok III - TI02 @ 2022</strong>
+      <strong>Develop by Kelompok III - TI02 &copy; 2022</strong>
     </footer>
   </div>
   <!-- ./wrapper -->
