--- a/pages/forms/form_booking.html
+++ b/pages/forms/form_booking.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--
-This is a starter template page. Use this page to start your new project from
-scratch. This page gets rid of all links and provides the needed markup only.
--->
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -15,14 +11,21 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
+  <!-- Favicon -->
+  <link rel="icon" href="../../dist/img/BlueDentalFavicon.png"/>
+  <style>
+    input {
+      background: #365f63;
+    }
+  </style>
 </head>
 <body class="hold-transition layout-top-nav">
 <div class="wrapper">
 
   <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
+  <nav class="main-header navbar navbar-expand-md navbar-light navbar-white sticky-top" style="background-color: #d4f1f4">
     <div class="container">
-      <a href="../index.html" class="navbar-brand">
+      <a href="../tentang-kami/tim-kami.html" class="navbar-brand">
         <img src="../../dist/img/BlueDentalLogo.png" alt="Blue Dental Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
         <span class="brand-text font-weight-light">Blue Dental</span>
       </a>
@@ -35,22 +38,22 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <!-- Left navbar links -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="../index.html" class="nav-link">Home</a>
+            <a href="../../index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="layanan.html" class="nav-link">Layanan</a>
+            <a href="../Layanan/layanan.html" class="nav-link">Layanan</a>
           </li>
           <li class="nav-item">
-            <a href="form_booking.html" class="nav-link">Booking</a>
+            <a href="../forms/form_booking.html" class="nav-link active">Booking</a>
           </li>
           <li class="nav-item">
-            <a href="testimoni.html" class="nav-link">Testimoni</a>
+            <a href="../testimoni.html" class="nav-link">Testimoni</a>
           </li>
           <li class="nav-item dropdown">
-            <a id="dropdownSubMenu1" href="about.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Tentang Kami</a>
+            <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Tentang Kami</a>
             <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
-              <li><a href="about.html" class="dropdown-item">About Blue Dental</a></li>
-              <li><a href="about.html" class="dropdown-item">Our Team</a></li>
+              <li><a href="../tentang-kami/about.html" class="dropdown-item">Tentang Blue Dental</a></li>
+              <li><a href="../tentang-kami/tim-kami.html" class="dropdown-item">Tim Kami</a></li>
             </ul>
           </li>
         </ul>
@@ -70,15 +73,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
             </div>
           </form>
           <li class="nav-item">
-            <a class="nav-link" data-widget="login" href="login/login.html" role="button">
+            <a class="nav-link" data-widget="login" href="../login/login.html" role="button">
               Login
             </a>
           </li>
-        <li class="nav-item">
-          <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-            <i class="fas fa-th-large"></i>
-          </a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -92,13 +90,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <div class="row mb-2">
           <div class="col-sm-6">
             <h1 class="m-0">Blue Dental HealthCare Clinic</h1>
-            <h5><small>Silahkan Isi Form Berikut</small></h5>
+            <h5><small>Silahkan Isi Form Berikut Untuk Booking Layanan</small></h5>
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-              <li class="breadcrumb-item active">Admin</li>
-              <li class="breadcrumb-item active">Tambah Data Dokter</li>
+              <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+              <li class="breadcrumb-item active">Booking</li>
             </ol>
           </div><!-- /.col -->
         </div><!-- /.row -->
@@ -115,9 +112,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <div class="row">
             <div class="col-12">
                 <!-- general form elements -->
-                <div class="card card-primary">
-                    <div class="card-header">
-                        <h3 class="card-title">Form Tambah Data Dokter</h3>
+                <div class="card">
+                    <div class="card-header" style="background-color: #d4f1f4">
+                        <h3 class="card-title">Booking Form</h3>
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
@@ -125,38 +122,80 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <div class="card-body">
                             <div class="row">
                               <div class="form-group col-6">
-                                <label for="namaDokter">Nama Dokter</label>
-                                <input type="text" class="form-control" id="namaDokter"
-                                    placeholder="Masukkan Nama" />
+                                <label for="namaPasien">Nama</label>
+                                <input type="text" class="form-control" id="namaPasien"
+                                    placeholder="Masukkan Nama" required />
                             </div>
                             <div class="form-group col-6">
-                              <label for="gelarDokter">Gelar</label>
-                              <input type="text" class="form-control" id="gelarDokter"
-                                  placeholder="Masukkan Gelar" />
-                          </div>
+                                <label for="umurPasien">Umur</label>
+                                <input type="text" class="form-control" id="umurPasien"
+                                    placeholder="Masukkan Umur" required />
+                            </div>
                             </div>
                             <div class="row">
                               <div class="form-group col-6">
-                                <label>Pilih Keahlian</label>
+                                <label>Pilih Dokter</label>
                                 <select class="form-control select2" style="width: 100%">
-                                    <option selected="selected">Orthodontist</option>
-                                    <option>Spesialis Gigi Anak</option>
-                                    <option>Dokter Bedah Mulut</option>
+                                    <option selected="selected">drg. Amalia</option>
+                                    <option>drg. Kirana Julia</option>
+                                    <option disabled="disabled">
+                                        drg. Fauzi Ahmad (disabled)
+                                    </option>
+                                    <option>drg. Rizky Febryan</option>
+                                    <option>drg. Devy Sendy</option>
+                                    <option>drg. Zain Abdullah</option>
                                 </select>
                             </div>
                             <div class="form-group col-6">
-                                <label>Pilih Gender</label>
+                                <label>Pilih layanan</label>
                                 <select class="form-control select2" style="width: 100%">
-                                    <option selected="selected">Perempuan</option>
-                                    <option>Laki-Laki</option>
+                                    <option selected="selected">Cabut Gigi</option>
+                                    <option>Veneer</option>
+                                    <option>Teeth Whitening</option>
+                                    <option>Perawatan Gigi Anak</option>
+                                    <option>Tambal Gigi</option>
+                                    <option>Cleaning & Scaling</option>
+                                    <option>Braces/Behel</option>
+                                    <option>Dental X-ray</option>
+                                    <option>Orthodonti</option>
                                 </select>
                             </div>
+                            </div>
+                            <div class="row">
+                              <div class="form-group col-6">
+                                <label for="keluhanPasien">Keluhan</label>
+                                <input type="text" class="form-control" id="keluhanPasien"
+                                    placeholder="Tuliskan Keluhan Anda" required />
+                            </div>
+                            <div class="form-group col-6">
+                                <label for="tglPeriksa">Tanggal Periksa</label><br />
+                                <input type="date" class="form-control" id="tglPeriksa" name="tglPeriksa" required />
+                            </div>
+                            </div>
+  
+                            <label for="payment">Pembayaran</label>
+                            <div class="row my-3">
+                                <div class="custom-control custom-radio mx-2">
+                                    <input id="credit" name="paymentMethod" type="radio"
+                                        class="custom-control-input" checked required />
+                                    <label class="custom-control-label" for="credit">Transfer</label>
+                                </div>
+                                <div class="custom-control custom-radio mx-2">
+                                    <input id="e-wallet" name="paymentMethod" type="radio"
+                                        class="custom-control-input" required />
+                                    <label class="custom-control-label" for="e-wallet">E-wallet</label>
+                                </div>
+                                <div class="custom-control custom-radio mx-2">
+                                    <input id="cash" name="paymentMethod" type="radio"
+                                        class="custom-control-input" required />
+                                    <label class="custom-control-label" for="cash">Cash</label>
+                                </div>
                             </div>
                             <div class="row">
                               <div class="form-group col-6">
                                 <label for="noHp">No. Handphone</label>
                                 <input type="text" class="form-control" id="noHp"
-                                    placeholder="08xxxxxxxxxx" />
+                                    placeholder="08xxxxxxxxxx" required />
                             </div>
                             <div class="form-group col-6">
                                 <label for="inputEmail1">Email address</label>
@@ -166,7 +205,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                                 class="fas fa-envelope"></i></span>
                                     </div>
                                     <input type="email" class="form-control" id="inputEmail1"
-                                        placeholder="Masukkan Email" />
+                                        placeholder="Masukkan Email" required />
                                 </div>
                             </div>
                             </div>
@@ -177,11 +216,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         </div>
                         <!-- /.card-body -->
   
-                        <div class="card-footer">
+                        <div class="card-footer" style="background-color: #bfdde0">
                             <div class="row">
                                 <div class="col-3">
                                     <button class="btn btn-primary btn-lg btn-block" type="submit">
-                                        Simpan
+                                        <a href="../admin/admin_booking.html" class="text-decoration-none text-white">Simpan</a>
                                     </button>
                                 </div>
                                 <div class="col-2">
@@ -207,20 +246,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
   </div>
   <!-- /.content-wrapper -->
 
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
-
   <!-- Main Footer -->
   <footer class="main-footer">
     <!-- To the right -->
     <div class="float-right d-none d-sm-inline">
-      Powered by AdminLTE
+      <small>Powered by AdminLTE</small>
     </div>
     <!-- Default to the left -->
-    <strong>Develop by Jovina Gustari @ 2022.</strong> All rights reserved.
+    <strong>Develop by Kelompok III - TI02 &copy; 2022.</strong> All rights reserved.
   </footer>
 </div>
 <!-- ./wrapper -->
