--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -2,32 +2,33 @@
 <html>
 <head>
 	<title>Login</title>
-	<link rel="stylesheet" type="text/css" href="slide navbar style.css">
+	<link rel="stylesheet" type="text/css" href="assets/login.css">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="main">  	
+		<input type="checkbox" id="chk" aria-hidden="true">
 			<div class="signup">
-				<form action="../admin.html">
+				<form action="login.html">
 					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="name" id="name" placeholder="Your Name" required="">
-					<input type="text" name="txt" id="email" placeholder="Email" required="">
-					<input type="text" name="username" id="username" placeholder="Username" required="">
-					<input type="password" name="password" id="password" placeholder="Password" required="">
+					<input type="text" name="name" id="name" placeholder="Your Name" required>
+					<input type="text" name="txt" id="email" placeholder="Email" required>
+					<input type="text" name="txt" id="username" placeholder="Username" required>
+					<input type="password" name="txt" id="password" placeholder="Password" required>
 					<button type="submit">Sign up</button>
 				</form>
 			</div>
 
 			<div class="login">
-				<form action="../admin.html">
+				<form action="../admin/admin_booking.html">
 					<label for="chk" aria-hidden="true">Login</label>
-					<input type="text" id="username" name="username" placeholder="Email" required="">
-					<input type="password" id="password" name="password" placeholder="Password" required="">
+					<input type="text" name="txt" id="username" placeholder="Username" required>
+					<input type="password" name="txt" id="password" placeholder="Password" required>
 					<button type="submit">Login</button>
 				</form>
 			</div>
 	</div>
-	<script src="login.js"></script>
-	<script src="register.js"></script>
+	<script src="assets/login.js"></script>
+	<script src="assets/register.js"></script>
 </body>
 </html>
